// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AppController (e2e) /query_1 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "str1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "date",
          ],
          "received": "Invalid Date",
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_1 success (GET) 1`] = `
{
  "date": "2025-01-01T00:00:00.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_1 success (GET) 2`] = `
{
  "date": "2025-01-01T00:00:00.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_1 success (GET) 3`] = `
{
  "date": "2025-03-01T00:00:00.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_1 success (GET) 4`] = `
{
  "date": "2025-12-24T00:00:00.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_1 success (GET) 5`] = `
{
  "date": "2025-10-25T15:44:59.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_2 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_value",
          "message": "Invalid option: expected one of "A"|"B"|"C"",
          "path": [
            "enum1",
          ],
          "values": [
            "A",
            "B",
            "C",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_2 success (GET) 1`] = `
{
  "enum1": "A",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /query_3 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
            ],
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                "path": [],
                "values": [
                  "AA",
                  "BB",
                  "CC",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "enum1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "enum2",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_3 success (GET) 1`] = `
{
  "enum1": "BB",
  "enum2": "okok",
}
`;

exports[`AppController (e2e) /query_4 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_type",
                "expected": "object",
                "message": "Invalid input: expected object, received undefined",
                "path": [],
              },
            ],
            [
              {
                "code": "invalid_type",
                "expected": "object",
                "message": "Invalid input: expected object, received undefined",
                "path": [],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "field2",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "query1",
            "str1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "query1",
            "date",
          ],
          "received": "Invalid Date",
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "query1",
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_4 success (GET) 1`] = `
{
  "field2": {
    "enum1": "A",
    "enum2": "okok",
  },
  "query1": {
    "date": "2025-05-02T00:00:00.000Z",
    "nbr1": 99,
    "str1": "ahah",
  },
}
`;

exports[`AppController (e2e) /query_5 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [
                  "enum1",
                ],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "number",
                "message": "Invalid input: expected number, received NaN",
                "path": [
                  "nbr1",
                ],
                "received": "NaN",
              },
            ],
            [
              {
                "code": "invalid_union",
                "errors": [
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "A"|"B"|"C"",
                      "path": [],
                      "values": [
                        "A",
                        "B",
                        "C",
                      ],
                    },
                  ],
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                      "path": [],
                      "values": [
                        "AA",
                        "BB",
                        "CC",
                      ],
                    },
                  ],
                ],
                "message": "Invalid input",
                "path": [
                  "enum1",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "query4",
            "field2",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "query4",
            "query1",
            "date",
          ],
          "received": "Invalid Date",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_5 success (POST) 1`] = `
{
  "force": false,
  "query4": {
    "field2": {
      "enum1": "A",
      "enum2": "okok",
    },
    "query1": {
      "date": "2025-05-02T00:00:00.000Z",
      "nbr1": 99,
      "str1": "ahah",
    },
  },
}
`;

exports[`AppController (e2e) /query_6 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [
                  "enum1",
                ],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "string",
                "message": "required",
                "path": [
                  "str1",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "number",
                "message": "Invalid input: expected number, received NaN",
                "path": [
                  "nbr1",
                ],
                "received": "NaN",
              },
            ],
            [
              {
                "code": "invalid_union",
                "errors": [
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "A"|"B"|"C"",
                      "path": [],
                      "values": [
                        "A",
                        "B",
                        "C",
                      ],
                    },
                  ],
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                      "path": [],
                      "values": [
                        "AA",
                        "BB",
                        "CC",
                      ],
                    },
                  ],
                ],
                "message": "Invalid input",
                "path": [
                  "enum1",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "arr",
            1,
            "field2",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_6 success (POST) 1`] = `
{
  "arr": [
    {
      "field2": {
        "enum1": "A",
        "nbr1": 123,
        "str1": "lala",
      },
      "query1": {
        "date": "2025-05-02T00:00:00.000Z",
        "nbr1": 999,
        "str1": "lalala",
      },
    },
    {
      "field2": {
        "enum1": "AA",
        "enum2": "Aahah",
      },
      "query1": {
        "date": "2025-10-02T00:00:00.000Z",
        "nbr1": 111,
        "str1": "lalala",
      },
    },
  ],
}
`;

exports[`AppController (e2e) /query_7 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "too_small",
          "inclusive": true,
          "message": "Too small: expected number to be >=-3",
          "minimum": -3,
          "origin": "number",
          "path": [
            "nbr",
          ],
        },
        {
          "code": "invalid_format",
          "format": "email",
          "message": "Invalid email address",
          "origin": "string",
          "path": [
            "email",
          ],
          "pattern": "/^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$/",
        },
        {
          "code": "invalid_format",
          "format": "url",
          "message": "Invalid URL",
          "path": [
            "url",
          ],
        },
        {
          "code": "invalid_format",
          "format": "regex",
          "message": "Invalid string: must match pattern /^[0-9]{10}$/",
          "origin": "string",
          "path": [
            "phone",
          ],
          "pattern": "/^[0-9]{10}$/",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_7 fail (POST) 2`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "too_big",
          "inclusive": true,
          "maximum": 10,
          "message": "Too big: expected string to have <=10 characters",
          "origin": "string",
          "path": [
            "str",
          ],
        },
        {
          "code": "too_big",
          "inclusive": true,
          "maximum": 23,
          "message": "Too big: expected number to be <=23",
          "origin": "number",
          "path": [
            "nbr",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_7 success (POST) 1`] = `
{
  "email": "hey@hey.com",
  "nbr": 14,
  "phone": "1234567894",
  "str": "hello",
  "url": "https://google.com",
}
`;

exports[`AppController (e2e) /query_8 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nested",
            "long",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_8 success (POST) 1`] = `
{
  "nested": {
    "long": {
      "prop": 21,
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "object",
          "message": "Invalid input: expected object, received undefined",
          "path": [
            "required",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 2`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "object",
          "message": "Invalid input: expected object, received undefined",
          "path": [
            "required",
            "long",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 3`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "object",
          "message": "Invalid input: expected object, received number",
          "path": [
            "required",
            "long",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 4`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "required",
            "long",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 5`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "object",
          "message": "Invalid input: expected object, received undefined",
          "path": [
            "opt",
            "long",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 6`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "opt",
            "long",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 7`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "opt",
            "long",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 fail (POST) 8`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "required",
            "opt",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_9 success (POST) 1`] = `
{
  "required": {
    "long": {
      "prop": 21,
    },
    "semi": {},
  },
}
`;

exports[`AppController (e2e) /query_9 success (POST) 2`] = `
{
  "required": {
    "long": {
      "prop": 21,
    },
  },
}
`;

exports[`AppController (e2e) /query_9 success (POST) 3`] = `
{
  "opt": {
    "long": {
      "prop": 21,
    },
  },
  "required": {
    "long": {
      "prop": 21,
    },
  },
}
`;

exports[`AppController (e2e) /query_10 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "arr2d2",
            1,
            2,
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /query_10 success (POST) 1`] = `
{
  "arr2d": [
    [
      "a",
      "b",
    ],
    [
      "c",
      "d",
    ],
  ],
}
`;

exports[`AppController (e2e) /response_1 fail (GET) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "str1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "date",
          ],
          "received": "Invalid Date",
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_1 success (GET) 1`] = `
{
  "date": "2025-01-01T00:00:00.000Z",
  "nbr1": 123,
  "str1": "lala",
}
`;

exports[`AppController (e2e) /response_2 fail (GET) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_value",
          "message": "Invalid option: expected one of "A"|"B"|"C"",
          "path": [
            "enum1",
          ],
          "values": [
            "A",
            "B",
            "C",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_2 success (GET) 1`] = `
{
  "enum1": "A",
  "nbr1": 42,
  "str1": "test",
}
`;

exports[`AppController (e2e) /response_3 fail (GET) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
            ],
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                "path": [],
                "values": [
                  "AA",
                  "BB",
                  "CC",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "enum1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "enum2",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_3 success (GET) 1`] = `
{
  "enum1": "BB",
  "enum2": "okok",
}
`;

exports[`AppController (e2e) /response_4 fail (GET) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [
                  "enum1",
                ],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "string",
                "message": "required",
                "path": [
                  "str1",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "number",
                "message": "Invalid input: expected number, received NaN",
                "path": [
                  "nbr1",
                ],
                "received": "NaN",
              },
            ],
            [
              {
                "code": "invalid_union",
                "errors": [
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "A"|"B"|"C"",
                      "path": [],
                      "values": [
                        "A",
                        "B",
                        "C",
                      ],
                    },
                  ],
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                      "path": [],
                      "values": [
                        "AA",
                        "BB",
                        "CC",
                      ],
                    },
                  ],
                ],
                "message": "Invalid input",
                "path": [
                  "enum1",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "string",
                "message": "required",
                "path": [
                  "enum2",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "field2",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "query1",
            "str1",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "query1",
            "date",
          ],
          "received": "Invalid Date",
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "query1",
            "nbr1",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_4 success (GET) 1`] = `
{
  "field2": {
    "enum1": "A",
    "enum2": "okok",
  },
  "query1": {
    "date": "2025-06-01T00:00:00.000Z",
    "nbr1": 10,
    "str1": "ok",
  },
}
`;

exports[`AppController (e2e) /response_5 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [
                  "enum1",
                ],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "number",
                "message": "Invalid input: expected number, received NaN",
                "path": [
                  "nbr1",
                ],
                "received": "NaN",
              },
            ],
            [
              {
                "code": "invalid_union",
                "errors": [
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "A"|"B"|"C"",
                      "path": [],
                      "values": [
                        "A",
                        "B",
                        "C",
                      ],
                    },
                  ],
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                      "path": [],
                      "values": [
                        "AA",
                        "BB",
                        "CC",
                      ],
                    },
                  ],
                ],
                "message": "Invalid input",
                "path": [
                  "enum1",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "query4",
            "field2",
          ],
        },
        {
          "code": "invalid_type",
          "expected": "date",
          "message": "Invalid input: expected date, received Date",
          "path": [
            "query4",
            "query1",
            "date",
          ],
          "received": "Invalid Date",
        },
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "query4",
            "query1",
            "nbr1",
          ],
          "received": "NaN",
        },
        {
          "code": "invalid_type",
          "expected": "boolean",
          "message": "Invalid input: expected boolean, received undefined",
          "path": [
            "force",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_5 success (POST) 1`] = `
{
  "force": true,
  "query4": {
    "field2": {
      "enum1": "A",
      "enum2": "okok",
    },
    "query1": {
      "date": "2025-06-01T00:00:00.000Z",
      "nbr1": 123,
      "str1": "ok",
    },
  },
}
`;

exports[`AppController (e2e) /response_6 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_union",
          "errors": [
            [
              {
                "code": "invalid_value",
                "message": "Invalid option: expected one of "A"|"B"|"C"",
                "path": [
                  "enum1",
                ],
                "values": [
                  "A",
                  "B",
                  "C",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "string",
                "message": "required",
                "path": [
                  "str1",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "number",
                "message": "Invalid input: expected number, received NaN",
                "path": [
                  "nbr1",
                ],
                "received": "NaN",
              },
            ],
            [
              {
                "code": "invalid_union",
                "errors": [
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "A"|"B"|"C"",
                      "path": [],
                      "values": [
                        "A",
                        "B",
                        "C",
                      ],
                    },
                  ],
                  [
                    {
                      "code": "invalid_value",
                      "message": "Invalid option: expected one of "AA"|"BB"|"CC"",
                      "path": [],
                      "values": [
                        "AA",
                        "BB",
                        "CC",
                      ],
                    },
                  ],
                ],
                "message": "Invalid input",
                "path": [
                  "enum1",
                ],
              },
              {
                "code": "invalid_type",
                "expected": "string",
                "message": "required",
                "path": [
                  "enum2",
                ],
              },
            ],
          ],
          "message": "Invalid input",
          "path": [
            "arr",
            0,
            "field2",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_6 success (POST) 1`] = `
{
  "arr": [
    {
      "field2": {
        "enum1": "A",
        "nbr1": 2,
        "str1": "x",
      },
      "query1": {
        "date": "2025-01-01T00:00:00.000Z",
        "nbr1": 1,
        "str1": "abc",
      },
    },
    {
      "field2": {
        "enum1": "AA",
        "enum2": "okok",
      },
      "query1": {
        "date": "2025-02-01T00:00:00.000Z",
        "nbr1": 3,
        "str1": "def",
      },
    },
  ],
}
`;

exports[`AppController (e2e) /response_7 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "too_small",
          "inclusive": true,
          "message": "Too small: expected string to have >=1 characters",
          "minimum": 1,
          "origin": "string",
          "path": [
            "str",
          ],
        },
        {
          "code": "too_small",
          "inclusive": true,
          "message": "Too small: expected number to be >=-3",
          "minimum": -3,
          "origin": "number",
          "path": [
            "nbr",
          ],
        },
        {
          "code": "invalid_format",
          "format": "email",
          "message": "Invalid email address",
          "origin": "string",
          "path": [
            "email",
          ],
          "pattern": "/^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$/",
        },
        {
          "code": "invalid_format",
          "format": "url",
          "message": "Invalid URL",
          "path": [
            "url",
          ],
        },
        {
          "code": "invalid_format",
          "format": "regex",
          "message": "Invalid string: must match pattern /^[0-9]{10}$/",
          "origin": "string",
          "path": [
            "phone",
          ],
          "pattern": "/^[0-9]{10}$/",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_7 success (POST) 1`] = `
{
  "email": "test@example.com",
  "nbr": 10,
  "phone": "1234567890",
  "str": "most 10",
  "url": "https://example.com",
}
`;

exports[`AppController (e2e) /response_8 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "nested",
            "long",
            "prop",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_8 success (POST) 1`] = `
{
  "nested": {
    "long": {
      "prop": 42,
    },
  },
}
`;

exports[`AppController (e2e) /response_9 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "object",
          "message": "Invalid input: expected object, received undefined",
          "path": [
            "required",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_9 success (POST) 1`] = `
{
  "opt": {
    "long": {
      "prop": 21,
    },
  },
  "required": {
    "long": {
      "prop": 21,
    },
  },
}
`;

exports[`AppController (e2e) /response_10 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "arr2d2",
            1,
            1,
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /response_10 success (POST) 1`] = `
{
  "arr2d": [
    [
      "a",
      "b",
    ],
    [
      "c",
      "d",
    ],
  ],
  "arr2d2": [
    [
      1,
      2,
      3,
    ],
    [
      4,
      5,
      6,
    ],
  ],
}
`;

exports[`AppController (e2e) /users/query_1 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "name",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_1 fail (GET) 2`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "too_small",
          "inclusive": true,
          "message": "Too small: expected number to be >=0",
          "minimum": 0,
          "origin": "number",
          "path": [
            "age",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_1 success (GET) 1`] = `
{
  "name": "lala",
}
`;

exports[`AppController (e2e) /users/query_1 success (GET) 2`] = `
{
  "age": 34,
  "name": "lala",
}
`;

exports[`AppController (e2e) /users/query_2 fail (POST) 1`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "name",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_2 fail (POST) 2`] = `
{
  "error": {
    "body": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "options",
            "all",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_2 success (POST) 1`] = `
{
  "name": "lala",
}
`;

exports[`AppController (e2e) /users/query_2 success (POST) 2`] = `
{
  "name": "lala",
  "options": {
    "all": "yes",
  },
}
`;

exports[`AppController (e2e) /users/query_3 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "a",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_3 fail (GET) 2`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "too_small",
          "inclusive": true,
          "message": "Too small: expected number to be >=0",
          "minimum": 0,
          "origin": "number",
          "path": [
            "b",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_3 success (GET) 1`] = `{}`;

exports[`AppController (e2e) /users/query_3 success (GET) 2`] = `{}`;

exports[`AppController (e2e) /users/query_4 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "required",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_4 fail (GET) 2`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "required",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_4 success (GET) 1`] = `{}`;

exports[`AppController (e2e) /users/query_4 success (GET) 2`] = `{}`;

exports[`AppController (e2e) /users/query_5 fail (GET) 1`] = `
{
  "error": {
    "param": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "number",
          "message": "Invalid input: expected number, received NaN",
          "path": [
            "id",
          ],
          "received": "NaN",
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_5 success (GET) 1`] = `
{
  "id": 453,
  "lol": 1,
  "required": "hello",
}
`;

exports[`AppController (e2e) /users/query_5 success (GET) 2`] = `
{
  "id": 23,
  "lol": 1,
  "optional": "world",
  "required": "hi",
}
`;

exports[`AppController (e2e) /users/query_6 success (GET) 1`] = `{}`;

exports[`AppController (e2e) /users/query_6 success (GET) 2`] = `
{
  "force": true,
}
`;

exports[`AppController (e2e) /users/query_6 success (GET) 3`] = `
{
  "force": true,
}
`;

exports[`AppController (e2e) /users/query_6 success (GET) 4`] = `
{
  "force": false,
}
`;

exports[`AppController (e2e) /users/query_7 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "Expected string, received object",
          "path": [
            "name",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_7 success (GET) 1`] = `
{
  "info": {
    "age": "34",
  },
  "name": "hello",
}
`;

exports[`AppController (e2e) /users/query_7 success (GET) 2`] = `
{
  "info": "lol",
  "name": "hello",
}
`;

exports[`AppController (e2e) /users/query_8 success (GET) 1`] = `
{
  "info": {
    "name": "ok",
  },
}
`;

exports[`AppController (e2e) /users/query_8 success (GET) 2`] = `
{
  "info": {},
}
`;

exports[`AppController (e2e) /users/query_8 success (GET) 3`] = `
{
  "info": {
    "name": null,
  },
}
`;

exports[`AppController (e2e) /users/query_9 fail (GET) 1`] = `
{
  "error": {
    "query": {
      "issues": [
        {
          "code": "invalid_value",
          "message": "Invalid option: expected one of "user"|"admin"",
          "path": [
            "type",
          ],
          "values": [
            "user",
            "admin",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/query_9 success (GET) 1`] = `
{
  "name": "luke",
  "status": "online",
  "type": "user",
}
`;

exports[`AppController (e2e) /users/query_9 success (GET) 2`] = `
{
  "name": "luke",
  "type": "admin",
}
`;

exports[`AppController (e2e) /users/query_9 success (GET) 3`] = `
{
  "name": "luke",
  "status": null,
  "type": "admin",
}
`;

exports[`AppController (e2e) /users/query_10 success (GET) 1`] = `
{
  "books": [
    "book1",
    "book2",
  ],
  "name": "john",
  "pet": "dog",
  "type": "admin",
}
`;

exports[`AppController (e2e) /users/query_11 success (GET) 1`] = `
{
  "tags": [
    "tag1",
    "tag2",
  ],
  "user": {
    "name": "john",
  },
  "vote": 1,
}
`;

exports[`AppController (e2e) /users/query_11 success (GET) 2`] = `
{
  "tags": [
    "tag1",
  ],
  "user": {},
  "vote": -1,
}
`;

exports[`AppController (e2e) /users/query_12 success (GET) 1`] = `
{
  "deep": {
    "info": {
      "age": 25,
    },
  },
  "enum": 1,
}
`;

exports[`AppController (e2e) /users/response_1 fail (GET) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "name",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/response_1 success (GET) 1`] = `
{
  "age": 34,
  "name": "lala",
}
`;

exports[`AppController (e2e) /users/response_2 fail (POST) 1`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "name",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/response_2 fail (POST) 2`] = `
{
  "error": {
    "response": {
      "issues": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "required",
          "path": [
            "options",
            "all",
          ],
        },
      ],
    },
  },
}
`;

exports[`AppController (e2e) /users/response_2 success (POST) 1`] = `
{
  "name": "lala",
  "options": {
    "all": "yes",
  },
}
`;
